# FrogSockLib

./: CMakeLists.txt  README.md
example/: only_saa_server_test.cpp
include/: Address.h  Client.h  DataIntegrity.h  Server.h  Socket.h
src/: Address.cpp  Socket.cpp
tests/: test_address.cpp
